--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,17 @@
 name = ""
 version = ""
 description = ""
-authors = [
-    {name = "Caroline Mimeault", email = "carolinemimeault@gmail.com"},
-]
-dependencies = []
+authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
+dependencies = ["pg8000>=1.31.1"]
 requires-python = ">=3.11"
-license = {text = "MIT"}
+license = { text = "MIT" }
 
 [tool.pdm]
 
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
 build-backend = "pdm.pep517.api"
+
+[tool.pdm.scripts]
+start.cmd = "python scripts/data_import.py"
+start.env_file = ".env"
