--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,10 @@ name = ""
 version = ""
 description = ""
 authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
-dependencies = ["pg8000>=1.31.1"]
+dependencies = [
+    "pg8000>=1.31.1",
+    "ijson>=3.2.3",
+]
 requires-python = ">=3.11"
 license = { text = "MIT" }
 
