--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,12 @@ name = "MDALL"
 version = "0.0.1"
 description = "Personal exploration of open data"
 authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
-dependencies = ["pg8000>=1.31.1", "ijson>=3.2.3"]
+dependencies = [
+    "pg8000>=1.31.1",
+    "ijson>=3.2.3",
+    "uvicorn>=0.29.0",
+    "fastapi>=0.110.2",
+]
 requires-python = ">=3.11"
 license = { text = "MIT" }
 
@@ -28,3 +33,4 @@ dbdump = { shell = "pg_dump -s -F p -E UTF-8 --host=localhost --username=$DATABA
 newmigration = "migrate create -ext sql -dir migrations -seq"
 migrateup = { shell = "migrate -database $DATABASE_URL -path migrations up" }
 migratedown = { shell = "migrate -database $DATABASE_URL -path migrations down 1" }
+server = "uvicorn main:app --reload"
