--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ijson>=3.2.3",
     "uvicorn>=0.29.0",
     "fastapi>=0.110.2",
+    "httpx>=0.27.0",
 ]
 requires-python = ">=3.11"
 license = { text = "MIT" }
