--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ dependencies = [
 ]
 requires-python = ">=3.11"
 license = { text = "MIT" }
-
 [tool.pdm]
-
-[build-system]
-requires = ["pdm-pep517>=1.0.0"]
-build-backend = "pdm.pep517.api"
+[tool.pdm.dev-dependencies]
+#test = "pytest"
+test = [
+    "pytest>=8.1.1",
+]
 
 [tool.pdm.scripts]
 _.env_file = ".env"
@@ -36,3 +36,8 @@ migrateup = { shell = "migrate -database $DATABASE_URL -path migrations up" }
 migratedown = { shell = "migrate -database $DATABASE_URL -path migrations down 1" }
 # syntax to import a python module system (app.main:app instead of the file path app/main:app)
 server = "uvicorn app.main:app --reload"
+test = "pytest"
+[build-system]
+requires = ["pdm-pep517>=1.0.0"]
+build-backend = "pdm.pep517.api"
+
