--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,7 @@ requires-python = ">=3.11"
 license = { text = "MIT" }
 [tool.pdm]
 [tool.pdm.dev-dependencies]
-#test = "pytest"
-test = [
-    "pytest>=8.1.1",
-]
+test = ["pytest>=8.1.1"]
 
 [tool.pdm.scripts]
 _.env_file = ".env"
@@ -40,4 +37,3 @@ test = "pytest"
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
 build-backend = "pdm.pep517.api"
-
